# zlm_stock

./: .gitignore  准了么_prd.md  准了么_开发计划.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/routes/: backtests.py  quota.py  random_pick.py  rankings.py
backend/app/core/: config.py  deps.py  logging.py
backend/app/db/: __init__.py  base.py  init_db.py  models.py
backend/app/schemas/: backtest.py  quota.py  random_pick.py  rank.py
backend/app/scripts/: sync_data.py
backend/app/services/: akshare_client.py  backtest_engine.py  data_models.py  ingestor.py  quota_service.py  random_service.py  ranking_service.py  ths_client.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: BacktestTable.tsx  EquityChart.tsx  GradeBoard.tsx  RankCard.tsx  SummaryGrid.tsx
frontend/src/hooks/: useBacktest.ts  useQuota.ts  useRandomPick.ts  useRanks.ts
frontend/src/lib/: api.ts
frontend/src/pages/: BacktestPage.tsx  LandingPage.tsx
frontend/src/types/: backtest.ts  common.ts
infra/: docker-compose.yml
