[project]
name = "zlm-backend"
version = "0.1.0"
description = "准了么 FastAPI 服务"
authors = [{ name = "Codex", email = "dev@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "redis>=5.2.1",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30.0",
    "akshare>=1.14.72",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.5",
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"
